<resources>
    <string name="app_name">Family Map</string>
    <string name="server_host_label">Server Host:</string>
    <string name="server_host_hint">i.e 10.0.0.220</string>
    <string name="server_port_label">Server Port:</string>
    <string name="server_port_hint">i.e 8080</string>
    <string name="username_label">Username:</string>
    <string name="username_hint">i.e jackieChan24</string>
    <string name="password_label">Password:</string>
    <string name="password_hint">i.e goodPass12!</string>
    <string name="first_name_label">First Name:</string>
    <string name="first_name_hint">i.e John</string>
    <string name="last_name_label">Last Name:</string>
    <string name="last_name_hint">i.e Doe</string>
    <string name="email_label">Email:</string>
    <string name="email_hint">i.e johndoe24@gmail.com</string>
    <string name="gender_label">Gender:</string>
    <string name="male_label">Male</string>
    <string name="female_label">Female</string>
    <string name="sign_in_button">Sign In</string>
    <string name="register_button">Register</string>
    <string name="login_failed_toast">LOGIN FAILED!</string>
    <string name="register_failed_toast">REGISTER FAILED!</string>
    <string name="event_info">Click on a marker to see event details</string>
    <string name="gender_icon">Gender Icon</string>
    <string name="person_group_label">FAMILY MEMBERS</string>
    <string name="event_group_label">LIFE EVENTS</string>
    <string name="father">Father</string>
    <string name="mother">Mother</string>
    <string name="spouse">Spouse</string>
    <string name="child">Child</string>
    <string name="error">ERROR!</string>
    <string name="up">Up</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="settings_option_1">Life Story Lines</string>
    <string name="settings_option_1_description">SHOW LIFE STORY LINES</string>
    <string name="settings_option_2">Family Tree Lines</string>
    <string name="settings_option_2_description">SHOW FAMILY TREE LINES</string>
    <string name="settings_option_3">Spouse Lines</string>
    <string name="settings_option_3_description">SHOW SPOUSE LINES</string>
    <string name="settings_option_4">Father\'s Side</string>
    <string name="settings_option_4_description">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="settings_option_5">Mother\'s Side</string>
    <string name="settings_option_5_description">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="settings_option_6">Male Events</string>
    <string name="settings_option_7">Female Events</string>
    <string name="gender_filter_description">FILTER EVENTS BASED ON GENDER</string>
    <string name="logout">Logout</string>
    <string name="logout_description">RETURN TO LOGIN SCREEN</string>
</resources>