<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.PersonActivity">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name_label"
            android:textSize="12sp">
        </TextView>
        <TextView
            android:id="@+id/person_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="John"
            tools:textSize="20sp">
        </TextView>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_hint">
    </View>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name_label"
            android:textSize="12sp">
        </TextView>
        <TextView
            android:id="@+id/person_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Doe"
            tools:textSize="20sp">
        </TextView>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_hint">
    </View>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_label"
            android:textSize="12sp">
        </TextView>
        <TextView
            android:id="@+id/person_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Neutral"
            tools:textSize="20sp">
        </TextView>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_hint">
    </View>
    <ExpandableListView
        android:id="@+id/person_expandable_list_view"
        android:indicatorLeft="?android:expandableListPreferredItemIndicatorLeft"
        android:dividerHeight="0.5dp"
        android:divider="@color/grey_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        tools:context=".view.PersonActivity">
    </ExpandableListView>
</LinearLayout>